Fix T44930: File-select in redo panel, disables UI